--- a/css/global.css
+++ b/css/global.css
@@ -11,7 +11,7 @@
   --body-font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   --radius: 6px;
   --logo-image: url("https://storage.googleapis.com/stripe-sample-images/KAVHOLM.svg");
-  --form-width: 600px;
+  --form-width: 650px;
 }
 
 /* Base */
@@ -60,6 +60,9 @@ h4 {
 .sr-header {
   margin-bottom: 32px;
 }
+.sr-header a {
+  display: block;
+}
 .sr-payment-summary {
   margin-bottom: 20px;
 }
@@ -78,7 +81,6 @@ h4 {
   padding-left: 48px;
 }
 .sr-header__logo {
-  display: block;
   background-image: var(--logo-image);
   height: 24px;
   background-size: contain;
@@ -469,14 +471,17 @@ pre {
 }
 
 /* Custom */
+.sr-container {
+  display: flex;
+}
 .container {
   border: 1px solid #e8e8e8;
   border-radius: 6px;
   padding: 32px 28px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   max-width: 400px;
+  min-width: 250px;
 }
 
 .container .pasha-image-stack {
@@ -547,7 +552,29 @@ input[type="number"]::-webkit-outer-spin-button {
   animation-delay: 300ms;
 }
 .hidden {
-  display: none;
+  display: none !important;
+}
+
+.banner {
+  max-width: 825px;
+  margin: 0 auto;
+  padding: 0 22px;
+  font-size: 14px;
+  background: white;
+  color: #6a7c94;
+  border-radius: 22px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  padding: 15px;
+  line-height: 1.15;
+  position: absolute;
+  bottom: 2vh;
+  left: 0;
+  right: 0;
+  text-align: center;
+  justify-content: center;
 }
 
 @keyframes field-in {
